[gd_scene load_steps=3 format=3 uid="uid://rkx60a0prka1"]

[ext_resource type="Script" path="res://scripts/new_savegame_button.gd" id="1_8gc2j"]
[ext_resource type="Script" path="res://scripts/fancy_menu_button.gd" id="2_xfqxa"]

[node name="NewSavegameButton" type="HBoxContainer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_8gc2j")

[node name="LineEdit" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 8
placeholder_text = "Name of your save"

[node name="Create" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 8
disabled = true
text = "Create
"
script = ExtResource("2_xfqxa")

[connection signal="text_changed" from="LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="Create" to="." method="_on_create_pressed"]
